#1692 Minor adjustment to error handling.